force-app/main/default/objects/Lead/fields/Macthed_Account_SFDC_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Macthed_Account_SFDC_Validation_Status__c</fullName>
    <formula>TEXT(algnlta__Matched_Account__r.SFDC_Validation_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matched Account SFDC Validation Status.</inlineHelpText>
    <label>Matched Account SFDC Validation Status</label>
    <type>Text</type>
</CustomField>