force-app/main/default/objects/Lead/fields/Matched_Account_ABM_Key_Account_Current__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_ABM_Key_Account_Current__c</fullName>
    <description>Created this field for reportign purpose.</description>
    <formula>algnlta__Matched_Account__r.ABM_Key_Account_Current_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ABM Key Account Current Date of the Macthed Account.</inlineHelpText>
    <label>Matched Account ABM Key Account Current</label>
    <type>Date</type>
</CustomField>