force-app/main/default/objects/Lead/fields/Matched_Account_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Account_Type__c</fullName>
    <formula>TEXT(algnlta__Matched_Account__r.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matched Account Account Type</inlineHelpText>
    <label>Matched Account Account Type</label>
    <type>Text</type>
</CustomField>