force-app/main/default/objects/Lead/fields/Matched_Account_G2_Title_By_Product__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_G2_Title_By_Product__c</fullName>
    <formula>If( ISBLANK(algnlta__Matched_Account__r.G2_Title_by_Product__c), &quot;None&quot;,  algnlta__Matched_Account__r.G2_Title_by_Product__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>G2 Title by Product from the matched Account record.</inlineHelpText>
    <label>Matched Account G2 Title By Product</label>
    <type>Text</type>
</CustomField>