force-app/main/default/objects/Lead/fields/Matched_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner__c</fullName>
    <formula>algnlta__Matched_Account__r.Owner.FirstName  &amp; &quot; &quot; &amp; algnlta__Matched_Account__r.Owner.LastName</formula>
    <label>Matched Account Owner</label>
    <type>Text</type>
</CustomField>