force-app/main/default/objects/Lead/fields/Matched_Account_SDR__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_SDR__c</fullName>
    <formula>algnlta__Matched_Account__r.SDR_Owner__r.FirstName &amp; &quot; &quot; &amp;  algnlta__Matched_Account__r.SDR_Owner__r.LastName</formula>
    <label>Matched Account SDR</label>
    <type>Text</type>
</CustomField>