force-app/main/default/objects/Lead/fields/Matched_Account_SFDC_Status_Validated_On__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_SFDC_Status_Validated_On__c</fullName>
    <formula>algnlta__Matched_Account__r.SFDC_Status_Validated_On_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matched Account SFDC Status Validated On Date.</inlineHelpText>
    <label>Matched Account SFDC Status Validated On</label>
    <type>Date</type>
</CustomField>