force-app/main/default/objects/Lead/fields/Matched_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Status__c</fullName>
    <formula>algnlta__Matched_Account__r.Customer_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Matched Account Customer Status.</inlineHelpText>
    <label>Matched Account Status</label>
    <type>Text</type>
</CustomField>