force-app/main/default/objects/Lead/fields/nCino_Integration__c.field-meta.xml
<CustomField>
    <fullName>nCino_Integration__c</fullName>
    <label>nCino Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>