force-app/main/default/objects/Lead/fields/No_of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Attachments__c</fullName>
    <label>No.of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>