force-app/main/default/objects/Lead/fields/No_of_Email_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Email_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of Outreach.io activities made for Task Type &quot;Email&quot;.</inlineHelpText>
    <label>No. of Email Attempts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>