force-app/main/default/objects/Lead/fields/No_of_Users__c.field-meta.xml
<CustomField>
    <fullName>No_of_Users__c</fullName>
    <description>Number of users for CI/CD</description>
    <inlineHelpText>Please enter numeric value only.</inlineHelpText>
    <label>No. of CI/CD users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>