force-app/main/default/objects/Lead/fields/No_of_Vault_users__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vault_users__c</fullName>
    <description>Number of users for Vault</description>
    <inlineHelpText>Please enter numeric value only.</inlineHelpText>
    <label>No. of Vault users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>