force-app/main/default/objects/Lead/fields/Not_Fresh_Lead__c.field-meta.xml
<CustomField>
    <fullName>Not_Fresh_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if lead is from a current customer, SPAM, other not lead source</description>
    <inlineHelpText>Check if lead is from a current customer, SPAM, other not lead source</inlineHelpText>
    <label>Not Fresh Lead</label>
    <type>Checkbox</type>
</CustomField>