force-app/main/default/objects/Lead/fields/Nurture_Program__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Program__c</fullName>
    <label>Nurture Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Nurture_Program</valueSetName>
    </valueSet>
</CustomField>