force-app/main/default/objects/Lead/fields/OnPrem_Id__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Id__c</fullName>
    <label>OnPrem Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>