force-app/main/default/objects/Lead/fields/OnPrem_IDE__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_IDE__c</fullName>
    <label>OnPrem IDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>