force-app/main/default/objects/Lead/fields/OnPrem_License_Ide__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_License_Ide__c</fullName>
    <label>OnPrem License Ide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>