force-app/main/default/objects/Lead/fields/OnPrem_LOC_Avg__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_LOC_Avg__c</fullName>
    <label>OnPrem LOC Avg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>