force-app/main/default/objects/Lead/fields/OnPrem_Loc_MAX__c.field-meta.xml
<CustomField>
    <fullName>OnPrem_Loc_MAX__c</fullName>
    <label>OnPrem Loc MAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>