force-app/main/default/objects/Lead/fields/Opt_Product_Updates__c.field-meta.xml
<CustomField>
    <fullName>Opt_Product_Updates__c</fullName>
    <label>OptIn Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>