force-app/main/default/objects/Lead/fields/Other_Persona__c.field-meta.xml
<CustomField>
    <fullName>Other_Persona__c</fullName>
    <label>Other Persona</label>
    <type>TextArea</type>
</CustomField>