force-app/main/default/objects/Lead/fields/Other_Product_Interests__c.field-meta.xml
<CustomField>
    <fullName>Other_Product_Interests__c</fullName>
    <label>Other Product Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARvault</fullName>
            </value>
            <value>
                <fullName>ARMule</fullName>
            </value>
            <value>
                <fullName>AutoRABIT</fullName>
            </value>
            <value>
                <fullName>AutoRABIT DX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>