force-app/main/default/objects/Lead/fields/Partner_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Partner_Enterprise__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CodeScan: AR Compete</fullName>
            </value>
            <value>
                <fullName>Corporate Sales</fullName>
            </value>
            <value>
                <fullName>Emerging Market</fullName>
                <isActive>false</isActive>
                <label>Emerging Market</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Mid-market</fullName>
                <isActive>false</isActive>
                <label>Mid-market</label>
            </value>
            <value>
                <fullName>Non-profit</fullName>
                <isActive>false</isActive>
                <label>Non-profit</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Partner Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>