force-app/main/default/objects/Lead/fields/Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin__c</fullName>
    <label>Partner Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>