force-app/main/default/objects/Lead/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name (Old)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>