force-app/main/default/objects/Lead/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>CXO&apos;s</fullName>
            </value>
            <value>
                <fullName>Developer/Admin</fullName>
            </value>
            <value>
                <fullName>Head/VP/Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sr./Leads/Manager/Heads</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>