force-app/main/default/objects/Lead/fields/Potential_Partner__c.field-meta.xml
<CustomField>
    <fullName>Potential_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Partner</label>
    <type>Checkbox</type>
</CustomField>