force-app/main/default/objects/Lead/fields/Primary_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary Lead of the same Org/ Account/ Opportunity</inlineHelpText>
    <label>Primary Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>