force-app/main/default/objects/Lead/fields/Prior_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lead_Status__c</fullName>
    <inlineHelpText>Previous Lead Status we had before it changed to the current one.</inlineHelpText>
    <label>Prior Lead Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>