force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <inlineHelpText>Product Interest based on First Activity on Pardot.</inlineHelpText>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodeScan</fullName>
            </value>
            <value>
                <fullName>AutoRABIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>