force-app/main/default/objects/Lead/fields/Reason_for_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lost__c</fullName>
    <description>Lead Reason when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
    <inlineHelpText>Lead Reason when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
    <label>Reason for Lost</label>
    <length>30</length>
    <type>Text</type>
</CustomField>