force-app/main/default/objects/Lead/fields/Recent_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversation__c</fullName>
    <inlineHelpText>Field mapped to Recent Conversation in Hubspot.</inlineHelpText>
    <label>Recent Conversation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>