force-app/main/default/objects/Lead/fields/Recent_Conversation_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversation_Date__c</fullName>
    <inlineHelpText>Field mapped to Recent Conversation Date in Hubspot.</inlineHelpText>
    <label>Recent Conversation Date</label>
    <type>DateTime</type>
</CustomField>