force-app/main/default/objects/Lead/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <label>Record Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>