force-app/main/default/objects/Lead/fields/SDR_Name__c.field-meta.xml
<CustomField>
    <fullName>SDR_Name__c</fullName>
    <label>SDR Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arvind Tripathy</fullName>
            </value>
            <value>
                <fullName>Christina Blanco</fullName>
            </value>
            <value>
                <fullName>Krishna Chaitanya</fullName>
            </value>
            <value>
                <fullName>Nick Garcia</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sherdah Moca</fullName>
            </value>
            <value>
                <fullName>Venkatesh Thadanola</fullName>
            </value>
            <value>
                <fullName>Belinda Trevor</fullName>
            </value>
            <value>
                <fullName>Belle Akbari</fullName>
                <isActive>false</isActive>
                <label>Belle Akbari</label>
            </value>
            <value>
                <fullName>Shiva Kumar Gatla</fullName>
                <isActive>false</isActive>
                <label>Shiva Kumar Gatla</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>