force-app/main/default/objects/Lead/fields/SDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>SDR_Notes__c</fullName>
    <description>Shows customers&apos; comments while being contacted</description>
    <label>SDR Notes</label>
    <type>TextArea</type>
</CustomField>