force-app/main/default/objects/Lead/fields/Secondary_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Lead_Source__c</fullName>
    <label>Secondary Lead Source</label>
    <length>12</length>
    <type>Text</type>
</CustomField>