force-app/main/default/objects/Lead/fields/Sequence_Owner_Record_Owner_same__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Owner_Record_Owner_same__c</fullName>
    <formula>If(  ( Current_Sequence_User_Name__c =  ( Owner:User.FirstName  &amp;  Owner:User.LastName ) ), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To see if Outreach.io Serquence Owner and Lead Owner are same or not.</inlineHelpText>
    <label>Sequence Owner &amp; Record Owner same?</label>
    <type>Text</type>
</CustomField>