force-app/main/default/objects/Lead/fields/Suggested_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Record_Owner__c</fullName>
    <formula>CASESAFEID(IF(algnlta__Matched_Account__r.SDR_Owner__r.IsActive = true &amp;&amp; NOT(ISBLANK(algnlta__Matched_Account__r.SDR_Owner__c)), algnlta__Matched_Account__r.SDR_Owner__c,
IF(algnlta__Matched_Account__r.Owner.IsActive = true &amp;&amp; NOT(ISBLANK(algnlta__Matched_Account__r.OwnerId)), algnlta__Matched_Account__r.OwnerId,
&apos;0050K00000BQdcGQAT&apos;)))</formula>
    <label>Suggested Record Owner</label>
    <type>Text</type>
</CustomField>