force-app/main/default/objects/Lead/fields/Title_Category__c.field-meta.xml
<CustomField>
    <fullName>Title_Category__c</fullName>
    <label>Title Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>