force-app/main/default/objects/Lead/fields/Title_Category_Score__c.field-meta.xml
<CustomField>
    <fullName>Title_Category_Score__c</fullName>
    <description>Score of Title Category</description>
    <label>Title Category Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>