force-app/main/default/objects/Lead/fields/Title_Level__c.field-meta.xml
<CustomField>
    <fullName>Title_Level__c</fullName>
    <label>Title Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>