force-app/main/default/objects/Lead/fields/Title_Score__c.field-meta.xml
<CustomField>
    <fullName>Title_Score__c</fullName>
    <description>Qualitative score for the person&apos;s title representing someone who wants to purchase AutoRABIT software.</description>
    <label>Title Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>