force-app/main/default/objects/Lead/fields/Title_Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Title_Score_Formula__c</fullName>
    <formula>IF(CONTAINS(&quot;Salesforce::SFDC::SF::CRM::DevOps::&apos;CI/CD&apos;::&apos;Enterprise Applications&apos;::Architect::Release::Backup::&apos;Business Systems&apos;::nCino&quot;,Title), &quot;Gold&quot;, 
&quot;Tin&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Score_Formula</label>
    <type>Text</type>
</CustomField>