force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>36</length>
    <type>Text</type>
</CustomField>