force-app/main/default/objects/Lead/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <formula>Text(SDR_Name__c) &amp;  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>