force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>No Buying Authority</fullName>
            </value>
            <value>
                <fullName>Missing Feature</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Went Cold</fullName>
            </value>
            <value>
                <fullName>Using Competitor</fullName>
            </value>
            <value>
                <fullName>Not Fresh Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>