force-app/main/default/objects/Lead/fields/Unqualified_tStamp__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_tStamp__c</fullName>
    <description>Date/time that Lead was DQ</description>
    <label>Unqualified tStamp</label>
    <type>DateTime</type>
</CustomField>