force-app/main/default/objects/Lead/fields/user_action__c.field-meta.xml
<CustomField>
    <fullName>user_action__c</fullName>
    <label>user_action</label>
    <length>75</length>
    <type>Text</type>
</CustomField>