force-app/main/default/objects/Lead/fields/Using_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Using_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using SFDC</label>
    <type>Checkbox</type>
</CustomField>