force-app/main/default/objects/Lead/fields/X1_Lead_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X1_Lead_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status moved into &quot;1-Lead&quot;.</description>
    <inlineHelpText>Date Lead, Lead Status moved into &quot;1-Lead&quot;.</inlineHelpText>
    <label>1-Lead Status In</label>
    <type>DateTime</type>
</CustomField>