force-app/main/default/objects/Lead/fields/X1_Lead_Status_Out__c.field-meta.xml
<CustomField>
    <fullName>X1_Lead_Status_Out__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status move out of &quot;1-Lead&quot;.</description>
    <inlineHelpText>Date Lead, Lead Status move out of &quot;1-Lead&quot;.</inlineHelpText>
    <label>1-Lead Status Out</label>
    <type>DateTime</type>
</CustomField>