force-app/main/default/objects/Lead/fields/X2_Subscriber_Status_Out__c.field-meta.xml
<CustomField>
    <fullName>X2_Subscriber_Status_Out__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;2-Subscriber&quot;.</description>
    <inlineHelpText>Date Lead, Lead Status moved out of &quot;2-Subscriber&quot;.</inlineHelpText>
    <label>2-Subscriber Status Out</label>
    <type>DateTime</type>
</CustomField>