force-app/main/default/objects/Lead/fields/X4_MQL_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X4_MQL_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;4-MQL&quot;.</description>
    <inlineHelpText>Date Lead, Lead Status changed to &quot;4-MQL&quot;.</inlineHelpText>
    <label>4-MQL Status In</label>
    <type>DateTime</type>
</CustomField>